ecmascript/parser/tests/typescript-errors/tsc/classes/members/privateNames/privateNamesNotAllowedInVariableDeclarations/input.ts.stderr
error: Unexpected token `#`. Expected yield, an identifier, [ or {
 --> $DIR/tests/typescript-errors/tsc/classes/members/privateNames/privateNamesNotAllowedInVariableDeclarations/input.ts:4:7
  |
4 | const #foo = 3;
  |       ^

